; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_map.c_vm_map_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_map.c_vm_map_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mapzone = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@KTR_VM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"vm_map_create: %p\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_map_create(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @mapzone, align 4
  %9 = load i32, i32* @M_WAITOK, align 4
  %10 = call i32 @uma_zalloc(i32 %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* @KTR_VM, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @CTR1(i32 %11, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @_vm_map_init(i32 %14, i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* %7, align 4
  ret i32 %19
}

declare dso_local i32 @uma_zalloc(i32, i32) #1

declare dso_local i32 @CTR1(i32, i8*, i32) #1

declare dso_local i32 @_vm_map_init(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
